2.2.2/_sources/gallery/axisartist/simple_axis_direction03.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axis_direction03.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_simple_axis_direction03.py:


=======================
Simple Axis Direction03
=======================





.. image:: /gallery/axisartist/images/sphx_glr_simple_axis_direction03_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist as axisartist


    def setup_axes(fig, rect):
        ax = axisartist.Subplot(fig, rect)
        fig.add_subplot(ax)

        ax.set_yticks([0.2, 0.8])
        ax.set_xticks([0.2, 0.8])

        return ax


    fig = plt.figure(1, figsize=(5, 2))
    fig.subplots_adjust(wspace=0.4, bottom=0.3)

    ax1 = setup_axes(fig, "121")
    ax1.set_xlabel("X-label")
    ax1.set_ylabel("Y-label")

    ax1.axis[:].invert_ticklabel_direction()

    ax2 = setup_axes(fig, "122")
    ax2.set_xlabel("X-label")
    ax2.set_ylabel("Y-label")

    ax2.axis[:].major_ticks.set_tick_out(True)

    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axis_direction03.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_axis_direction03.py <simple_axis_direction03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_axis_direction03.ipynb <simple_axis_direction03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
